Layout Bug Hotfix for iOS

--- a/angular-src/src/app/components/navbar/navbar.component.less
+++ b/angular-src/src/app/components/navbar/navbar.component.less
@@ -4,6 +4,8 @@
 .navBar{
     height: 100%;
     display: flex;
+    height: 100px;//only for iOS Safari & iOS Chrome
+
     
     .navbar-logo-wrapper{
         flex: 4.5;
